// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalButton Renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <ExponentLinearGradient
    colors={
      Array [
        4279286482,
        4280914167,
      ]
    }
    endPoint={
      Array [
        0.65,
        1,
      ]
    }
    startPoint={
      Array [
        0.55,
        0,
      ]
    }
    style={
      Object {
        "borderRadius": 35.5,
        "elevation": 15,
        "flexDirection": "row",
        "height": 212.5,
        "justifyContent": "space-evenly",
        "marginTop": 35,
        "paddingLeft": 17.5,
        "paddingRight": 17.5,
        "paddingTop": 17.5,
        "width": 712.5,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": "white",
          "fontFamily": "montserrat-extra-bold",
          "fontSize": 38.95833442608516,
          "marginTop": 17.5,
          "textAlign": "left",
        }
      }
    />
    <Image
      resizeMode="contain"
      source={1}
      style={
        Object {
          "height": 177,
          "width": 177,
        }
      }
    />
  </ExponentLinearGradient>
</View>
`;

exports[`MidBlueButton Renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <ExponentLinearGradient
    colors={
      Array [
        4279286482,
        4278481116,
      ]
    }
    endPoint={
      Array [
        0.65,
        1,
      ]
    }
    startPoint={
      Array [
        0.55,
        0,
      ]
    }
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 20,
        "elevation": 15,
        "height": 141.5,
        "justifyContent": "center",
        "marginTop": 20,
        "width": 336.5,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": "white",
          "fontFamily": "montserrat-extra-bold",
          "fontSize": 35.416667660079604,
          "textAlign": "left",
        }
      }
    />
  </ExponentLinearGradient>
</View>
`;

exports[`MidYellowButton Renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <ExponentLinearGradient
    colors={
      Array [
        4294954035,
        4294089034,
      ]
    }
    endPoint={
      Array [
        0.65,
        1,
      ]
    }
    startPoint={
      Array [
        0.55,
        0,
      ]
    }
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 20,
        "elevation": 15,
        "height": 141.5,
        "justifyContent": "center",
        "marginTop": 20,
        "width": 336.5,
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Object {
          "color": "#3f2606",
          "fontFamily": "montserrat-extra-bold",
          "fontSize": 35.416667660079604,
          "textAlign": "left",
        }
      }
    />
  </ExponentLinearGradient>
</View>
`;
